Edit navigation CSS and fix search result spacing.

--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -185,7 +185,7 @@ a {
 		label {
 			display: flex;
 		}
-		button.search-submit {
+		button.search-submit, .search-field {
 			display: none;
 		}
 		input {
@@ -195,9 +195,6 @@ a {
 			outline: none;
 			background: transparent;
 			margin-left: 1rem;
-		}
-		.search-field {
-			display: none;
 		}
 		i.fa-search {
 			color: $green;
